# FreeTakServerUI

./: .gitignore  README.md  pyproject.toml
FreeTAKServer-UI/: .gitignore
FreeTAKServer-UI/app/: __init__.py
