[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "freetakserver-ui"
version = "2.2.2"
description = "An optional UI for FreeTAKServer"
license = "Eclipse License"
authors = [
    "FreeTAKTeam <FreeTakTeam@gmail.com>"
    ]
homepage = "https://github.com/FreeTAKTeam/FreeTakServer"
repository = "https://github.com/FreeTAKTeam/FreeTakServer"
readme= "README.md"
packages = [
    {include = "FreeTAKServer-UI"}
    ]

[tool.poetry.dependencies]
python=">=3.11,<4.0"
flask = ">=3.0.2"
flask_login = ">=0.6.3"
flask_migrate = ">=4.0.6"
flask_wtf = ">=1.2.1"
WTForms = ">=2.3.3"
sqlalchemy = ">=2.0.30"
flask_sqlalchemy = ">=3.1.1"
email_validator = ">=2.1.1"
gunicorn = ">=21.2.0"
python-decouple = ">=3.8"
sqlalchemy-utils = ">=0.41.1"
requests = ">=2.31.0"
eventlet = ">=0.36.0,<0.40"

# alembic="1.13.1"
# blinker="1.7.0"
# certifi="2024.2.2"
# charset-normalizer="3.3.2"
# click="8.1.7"
# colorama="0.4.6"
# dnspython="2.6.1"
# Flask-Cors="4.0.0"
# greenlet="3.0.3"
# idna="3.6"
# itsdangerous="2.1.2"
# Jinja2="3.1.3"
# Mako="1.3.2"
# MarkupSafe="2.1.5"
# packaging="24.0"
# typing-extensions="4.10.0"
# urllib3="2.2.1"
# Werkzeug="3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.flake8]
max-line-length = 100
ignore = ["E402", "E266"]
exclude = ["./migrations"]

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "fts-ui"
platforms = ["linux-64"]

[tool.pixi.dependencies]
pip = ">=25.0,<26.0"

[tool.pixi.tasks.install]
cmd = ["pip", "install", "."]
